# graduate_work

./: .env.template  .gitignore  HANDOFF_week2.md  README.md  abc.sh  cheatsheet.md  demo.md  demo_week2.md  diploma_architecture.drawio  diploma_architecture_full.drawio  diploma_tz.md  diploma_tz_short.md  diploma_week2_notes.md  docker-compose.override.yml  docker-compose.yml  es_schema_movies.json  mentor_week2.md  mentor_week3.md  my_drafts.md  ruff.toml  sprint_task.md  task.md  tasks_from_theory.md
activity-tracker-service/: Dockerfile  README.md  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml
activity-tracker-service/src/: main.py
activity-tracker-service/src/apache_kafka/: producer.py
activity-tracker-service/src/api/v1/: events.py  track.py
activity-tracker-service/src/core/: config.py
activity-tracker-service/src/models/: events.py
admin-panel-service/: Dockerfile  database_dump.sql  docker-entrypoint.sh  pyproject.toml  uwsgi.ini
admin-panel-service/main/: settings.py  urls.py
admin-panel-service/movies/: admin.py  models.py
admin-panel-service/movies/migrations/: 0001_initial.py
admin-panel-service/users/: backends.py  managers.py  models.py
admin-panel-service/users/migrations/: 0001_initial.py
alerting-service/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  examples.sql  pyproject.toml
alerting-service/alembic/: env.py
alerting-service/alembic/versions/: 0001_initial.py
alerting-service/sql/functions/: 000_helpers.sql  001_adm_create_rule.sql  002_adm_update_rule.sql  003_adm_enable_disable_rule.sql  004_adm_delete_rule.sql  005_adm_dry_run_rule.sql  006_adm_trigger_rule.sql  007_maint_dispatch_partitions.sql
alerting-service/sql/roles/: 001_alerting_admin.sql
alerting-service/sql/seed/: 001_alerting_templates.sql
alerting-service/sql/views/: 001_v_rules.sql  002_v_runs.sql  003_v_dispatch.sql
alerting-service/src/core/: config.py
alerting-service/src/db/: postgres.py  starrocks.py
alerting-service/src/models/: entity.py
alerting-service/src/services/: executor.py
alerting-service/src/workers/: __main__.py  engine.py  main.py
alerting-service/tests/: conftest.py  test_executor_logic.py
auth-service/: Dockerfile  README.md  cli.py  docker-entrypoint.sh  pyproject.toml  run.py
auth-service/alembic/: README  env.py
auth-service/alembic/versions/: a3c1d9f8b2e0_add_segmentation_fields.py  e7d3adf85da9_add_unique_constraint_on_user_roles_.py  f4472c503e14_init_auth_tables.py  ffddfa4b92cb_add_oauth_metadata.py
auth-service/src/: main.py
auth-service/src/core/: config.py  exceptions.py  security.py
auth-service/src/db/: postgres.py  redis.py
auth-service/src/models/: entity.py
auth-service/src/schemas/: auth.py  role.py  user.py
auth-service/src/services/: auth.py  role.py  user.py
auth-service/src/tests/: conftest.py  test_auth.py  test_roles.py  test_users.py
auth-service/src/utils/: dependencies.py  rate_limit.py
community-content-service/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  ruff.toml  run.py
community-content-service/alembic/: README  env.py
community-content-service/alembic/versions/: 20260503_0001_init_community_content.py
community-content-service/src/: main.py
community-content-service/src/auth/: jwt_bearer.py
community-content-service/src/core/: config.py  logger.py
community-content-service/src/db/: postgres.py
community-content-service/src/models/: entity.py
community-content-service/src/schemas/: bookmark.py  common.py  like.py  review.py
community-content-service/src/services/: bookmark.py  like.py  review.py
demo-tools/: Dockerfile  README.md  pyproject.toml
demo-tools/src/: config.py  main.py  seed_users.py  segments.py  trigger_events.py
films-etl-service/: Dockerfile  config.py  docker-entrypoint.sh  extract.py  load.py  logger.py  models.py  pipeline.py  pyproject.toml  run.py  state_handler.py  transform.py
films-search-service/: Dockerfile  docker-entrypoint.sh  pyproject.toml  ruff.toml  run.py
films-search-service/src/: main.py
films-search-service/src/auth/: jwt_bearer.py  permissions.py
films-search-service/src/core/: config.py  logger.py
films-search-service/src/db/: cache.py  elastic.py  redis.py  storage.py
films-search-service/src/models/: elastic_query.py  film.py
films-search-service/src/services/: film.py
notifications-service/: Dockerfile  README.md  pyproject.toml
notifications-service/alembic/: env.py
notifications-service/alembic/versions/: 0001_initial_tables.py
notifications-service/scripts/: admin_examples.sql
notifications-service/sql/functions/: 000_helpers.sql  001_adm_upsert_template.sql  002_adm_create_task.sql  003_send_user_event.sql  003_svc_send_user_event.sql  004_adm_update_task.sql  005_adm_enable_disable_task.sql  006_claim_messages_batch.sql  006_svc_claim_messages_batch.sql  007_mark_message_sending.sql  007_svc_mark_message_sending.sql  008_mark_message_sent.sql  008_svc_mark_message_sent.sql  009_mark_message_failed.sql  009_svc_mark_message_failed.sql  010_requeue_stuck_messages.sql  010_svc_requeue_stuck_messages.sql  011_get_messages_for_user.sql  011_svc_get_messages_for_user.sql
notifications-service/sql/roles/: 001_notification_admin.sql
notifications-service/sql/seed/: 001_base_templates.sql
notifications-service/sql/views/: 001_v_tasks.sql  002_v_messages.sql
notifications-service/src/core/: config.py  logging.py
notifications-service/src/models/: entity.py
notifications-service/src/shared/: auth_client.py  messaging.py  notifications_api.py  rabbit.py  templating.py  worker_loop.py
notifications-service/src/workers/: bootstrap.py  email_sender.py  publisher.py  recovery.py  scheduler.py  ws_gateway.py
notifications-service/tests/: conftest.py  test_end_to_end.py
tests/functional/: .dockerignore  .env.template.docker  .env.template.local  Dockerfile.tests  README.md  conftest.py  docker-compose.yml  pyproject.toml  settings.py
tests/functional/src/: test_film_detail.py  test_films_list.py  test_search.py
(+43 files in other folders)
