[tool.poetry]
package-mode = false

[project]
name = "movies"
version = "0.2.0"
description = "yandex prakticum middle python"
authors = [
    {name = "savelichev",email = "a5735402@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django (==5.2.9)",
    "uwsgi (>=2.0.31,<3.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"
flake8 = ">=7.3.0,<8.0.0"
