[tool.poetry]
package-mode = false

[project]
name = "alerting-service"
version = "0.1.0"
description = "Alerting engine: APScheduler + SQL-правила поверх StarRocks → notifications-service"
authors = [
    {name = "Савельичев Павел Иванович"}
]
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "sentry-sdk (>=2.0.0,<3.0.0)",
    "python-json-logger (>=2.0.7,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"
