[tool.poetry]
package-mode = false

[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Савельичев Павел Иванович",email = "savelichev@myservices.digital"}
]
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "redis (==5.0.4)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "async-fastapi-jwt-auth (>=0.6.6,<0.7.0)",
    "typer (>=0.24.1,<0.25.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "werkzeug (>=3.1.6,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sentry-sdk[fastapi] (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.test.dependencies]
pytest = ">=9.0.2,<10.0.0"
requests = ">=2.32.5,<3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"
