[tool.poetry]
package-mode = false

[project]
name = "demo-tools"
version = "0.1.0"
description = "CLI-утилиты для подготовки демо: seed-users + trigger-events"
authors = [
    {name = "Савельичев Павел Иванович"}
]
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "typer (>=0.18.0,<1.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "kafka-python (>=2.0.3,<3.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "faker (>=37.4.0,<40.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"
