[tool.poetry]
package-mode = false

[project]
name = "postgres-to-es"
version = "0.1.0"
description = ""
authors = [
    {name = "savelichev",email = "a5735402@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "backoff (>=2.2.1,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "elasticsearch (>=8.19.0,<9.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"
flake8 = ">=7.3.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
