[tool.poetry]
package-mode = false

[project]
name = "async-api-sprint-1"
version = "0.1.0"
description = "Спринт 4"
authors = [
    {name = "Савельичев Павел Иванович"}
]
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "elasticsearch[async]==8.13.2",
    "redis==5.0.4",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "dotenv>=0.9.9,<0.10.0",
    "fastapi[standard]>=0.128.0,<0.129.0",
    "opentelemetry-api~=1.28.0",
    "opentelemetry-sdk~=1.28.0",
    "opentelemetry-instrumentation-fastapi~=0.49b0",
    "opentelemetry-exporter-otlp~=1.28.0",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sentry-sdk[fastapi] (>=2.0.0,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
