[tool.poetry]
package-mode = false

[project]
name = "notifications-service"
version = "0.1.0"
description = "Сервис уведомлений: scheduler, outbox publisher, email/ws senders, recovery"
authors = [
    {name = "Савельичев Павел Иванович"}
]
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "aiosmtplib (>=3.0.2,<4.0.0)",
    "jinja2 (>=3.1.4,<4.0.0)",
    "croniter (>=3.0.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0,<9.0"
pytest-asyncio = ">=0.24,<1.0"
httpx = ">=0.28,<0.29"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: требует полного docker-compose стека (workers, mailpit, alice)",
]
