[project]
name = "movies-tests-functional"
version = "0.1.0"
description = "Функциональные тесты проекта movies"
authors = [
    {name = "Савельичев Павел Иванович",email = "savelichev@myservices.digital"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "elasticsearch[async] (==8.13.2)",
    "redis (==5.0.4)",
    "ruff (>=0.14.10,<0.15.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"